RESOLVED FIXED69418
Fails to compile with gtk-2.20.1
https://bugs.webkit.org/show_bug.cgi?id=69418
Summary Fails to compile with gtk-2.20.1
Rémi Duraffort
Reported 2011-10-05 07:08:06 PDT
WebKitGtk fails to compile with Gtk-2.20.1 (ubuntu lucid) even when adding --with-gtk=2.0 The failure is the following ../../Source/WebCore/platform/gtk/GtkDragAndDropHelper.cpp: In member function 'WTF::PassOwnPtr<WebCore::DragData> WebCore::GtkDragAndDropHelper::handleDragMotion(GdkDragContext*, const WebCore::IntPoint&, unsigned int)': ../../Source/WebCore/platform/gtk/GtkDragAndDropHelper.cpp:156: error: 'gdk_drag_context_get_actions' was not declared in this scope ../../Source/WebCore/platform/gtk/GtkDragAndDropHelper.cpp: In member function 'WTF::PassOwnPtr<WebCore::DragData> WebCore::GtkDragAndDropHelper::handleDragDataReceived(GdkDragContext*, GtkSelectionData*, guint)': ../../Source/WebCore/platform/gtk/GtkDragAndDropHelper.cpp:179: error: 'gdk_drag_context_get_actions' was not declared in this scope ../../Source/WebCore/platform/gtk/GtkDragAndDropHelper.cpp: In member function 'WTF::PassOwnPtr<WebCore::DragData> WebCore::GtkDragAndDropHelper::handleDragDrop(GdkDragContext*, const WebCore::IntPoint&)': ../../Source/WebCore/platform/gtk/GtkDragAndDropHelper.cpp:193: error: 'gdk_drag_context_get_actions' was not declared in this scope make[1]: *** [Source/WebCore/platform/gtk/libWebCoreGtk_la-GtkDragAndDropHelper.lo] Error 1
Attachments
Fix compilation with Gtk-2.20.1 (1022 bytes, patch)
2011-10-05 07:12 PDT, Rémi Duraffort
no flags
Rémi Duraffort
Comment 1 2011-10-05 07:12:46 PDT
Created attachment 109786 [details] Fix compilation with Gtk-2.20.1 Fix the compilation by adding one missing header that does the right defines.
Alejandro G. Castro
Comment 2 2011-10-05 09:26:09 PDT
Comment on attachment 109786 [details] Fix compilation with Gtk-2.20.1 Looks good to me. Your name apparently is not using UTF-8? Build fix patches do not need to be reviewed but now that you have written it and you are waiting for review, I think it is better if you add the Reviewed by.
WebKit Review Bot
Comment 3 2011-10-05 10:38:07 PDT
Comment on attachment 109786 [details] Fix compilation with Gtk-2.20.1 Clearing flags on attachment: 109786 Committed r96720: <http://trac.webkit.org/changeset/96720>
WebKit Review Bot
Comment 4 2011-10-05 10:38:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.