[GTK] Fix compilation with gtk v2.20.1 https://bugs.webkit.org/show_bug.cgi?id=69418

Unreviewed build fix

Patch by Rémi Duraffort <remi.duraffort@st.com> on 2011-10-05

* platform/gtk/GtkDragAndDropHelper.cpp:

Canonical link: https://commits.webkit.org/85481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96720 268f45cc-cd09-0410-ab3c-d52691b4dbfc